// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive adds TuiVCR to imports array when #viewContainer is migrated in external template: test.html 1`] = `
{
  "0. Before": "<ng-container #viewContainer />",
  "1. After": "<ng-container #viewContainer />",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive adds TuiVCR to imports array when #viewContainer is migrated in external template: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        templateUrl: './test.html',
                        imports: [],
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        templateUrl: './test.html',
                        imports: [],
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive adds TuiVCR to imports array when #viewContainer is migrated: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        template: '<ng-container #viewContainer />',
                        imports: [],
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        template: '<ng-container #viewContainer />',
                        imports: [],
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive does not change #viewContainer in component not extending TuiPortals: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';

                    @Component({
                        standalone: true,
                        selector: 'regular-component',
                        template: '<ng-container #viewContainer />',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class RegularComponent {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';

                    @Component({
                        standalone: true,
                        selector: 'regular-component',
                        template: '<ng-container #viewContainer />',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class RegularComponent {}
                ",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive does not change #viewContainer in external template of non-TuiPortals component: test.html 1`] = `
{
  "0. Before": "<ng-container #viewContainer />",
  "1. After": "<ng-container #viewContainer />",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive does not change #viewContainer in external template of non-TuiPortals component: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';

                    @Component({
                        standalone: true,
                        selector: 'regular-component',
                        templateUrl: './test.html',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class RegularComponent {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';

                    @Component({
                        standalone: true,
                        selector: 'regular-component',
                        templateUrl: './test.html',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class RegularComponent {}
                ",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive replaces #viewContainer template variable with tuiVCR directive: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';
                    import {CustomPortalService} from './service';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        template: '<ng-container #viewContainer />',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';
                    import {CustomPortalService} from './service';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        template: '<ng-container #viewContainer />',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive replaces #viewContainer with tuiVCR in external template of TuiPortals subclass: test.html 1`] = `
{
  "0. Before": "<ng-container #viewContainer />",
  "1. After": "<ng-container #viewContainer />",
}
`;

exports[`ng-update TuiPortalService TuiVCR — #viewContainer → tuiVCR directive replaces #viewContainer with tuiVCR in external template of TuiPortals subclass: test.ts 1`] = `
{
  "0. Before": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';
                    import {CustomPortalService} from './service';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        templateUrl: './test.html',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
  "1. After": "
                    import {ChangeDetectionStrategy, Component} from '@angular/core';
                    import {TuiPortals} from '@taiga-ui/cdk';
                    import {CustomPortalService} from './service';

                    @Component({
                        standalone: true,
                        selector: 'custom-host',
                        templateUrl: './test.html',
                        changeDetection: ChangeDetectionStrategy.OnPush,
                    })
                    export class CustomHost extends TuiPortals {}
                ",
}
`;
